--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 </header>
 
 ---
-
+<figure>
   <img src="images/banner.svg">
-<header>
-  <h2>The Solar System our home in the stars</h2>
+  <figcaption>The Solar System our home in the stars</figcaption>
 
 ---
 
-<h2>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</h2>
+<p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
