--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
-  <img src="images/logo.svg">
+<!DOCTYPE html>
+<html lang="en-ca">
+
+<head>
+
+  <meta charset="utf-8">
+  <title>Masthead Semantics</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 <body>
-<header>
-  <h1>The Solar System</h1>
 
-  <nav>
-    <ul>
-      <li><a href="#1">Stars</a></li>
-      <li><a href="#2">Terrestrial planets</a></li>
-      <li><a href="#3">Gas giants</a></li>
-      <li><a href="#4">Dwarf planets</a></li>
-      <li><a href="#5">Asteroids</a></li>
-      <li><a href="#6">Comets</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <h1>The Solar System</h1>
+    <img src="images/logo.svg" alt="logo">
+    <nav>
+      <ul>
+        <li><a href="#1">Stars</a></li>
+        <li><a href="#2">Terrestrial planets</a></li>
+        <li><a href="#3">Gas giants</a></li>
+        <li><a href="#4">Dwarf planets</a></li>
+        <li><a href="#5">Asteroids</a></li>
+        <li><a href="#6">Comets</a></li>
+      </ul>
+    </nav>
+  </header>
 
----
-<figure>
-  <img src="images/banner.svg">
-  <figcaption>The Solar System our home in the stars</figcaption>
+  <main>
+    <figure>
+      <img src="images/banner.svg" alt="banner">
 
----
+      <figcaption>The Solar System our home in the stars</figcaption>
+    </figure>
 
-<p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
+  
+</body>
+</html>
